--- a/templates/user.html
+++ b/templates/user.html
@@ -91,7 +91,7 @@
         <article class="media">
             <figure class="media-left" style="align-self: center">
                 <a class="image is-96x96" href="#">
-                    <img class="is-rounded" src="{{ url_for('static', filename=user_info.profile_pic_real) }}">
+                    <img class="is-rounded" src="{{user_info.profile_pic_real}}">
                 </a>
             </figure>
             <div class="media-content">
